Include & track non-ts generated js files
js files that were not generated by ts were being excluded from git.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ build
 .tmp
 src/**/*.map
 src/**/*.js
+!src/**/fireBaseData.service.js
+!src/**/*.spec.js
+!src/**/test-helpers/*.js
 
 # Ignore Test reporters
 ###################
